# wisp-engine

./: .gitignore  ASSET_MAPPING.md  BUILD_SYSTEM_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  CORRECTED_NEXT_STEPS.md  LICENSE  PHASE_5_COMPLETE_SUMMARY.md  PROJECT_EVALUATION_NEXT_STEPS.md  README.md  REPOSITORY_CLEANUP_PLAN.md  action_plan.md  audio.md  design doc.md  flow.md  memory_usage.md  overview.md  platformio.ini  sdkconfig.esp32-c6-lcd  sdkconfig.esp32-s3-spi  test_compilation.cpp  todo.md
docs/: README.md  (+36 more)
src/: CMakeLists.txt  bootloader.cpp  main.cpp  minimal_test_app.cpp  test_namespaces.cpp  wisp_engine.h
src/apps/: test_cartridge_app.h
src/core/: app_loop.h  app_loop_manager.h  frame_rate_manager.h  timekeeper.h
src/engine/: README.md  api_interface.h  engine.h  engine_common.h  namespace_integration.h  namespaces.h  wisp_engine_api.h
src/engine/app/: api_limits.h  app_lifecycle.h  config.h  curated_api.cpp  curated_api.h  curated_api_extended.h  interface.h  loader.h  loop.h  loop_manager.h  native_app_loader.h  native_loader.h  wisp_runtime_loader.cpp  wisp_runtime_loader.h  wisp_segmented_loader.h
src/engine/audio/: audio_api.cpp  audio_engine.h  audio_engine_class.cpp  audio_engine_class.h  audio_formats.cpp  audio_formats.h  audio_mixer.cpp  audio_mixer.h  audio_outputs.h  audio_source.h  bgm_looper.cpp  bgm_looper.h  cry_synth_node.cpp  cry_synth_node.h  engine.h  namespace_bridge.cpp
src/engine/connectivity/: bluetooth_config.h
src/engine/core/: component_systems.h  config.h  debug.cpp  debug.h  debug_esp32.h  engine.h  resource_manager.h  timing.cpp  timing.h
src/engine/database/: database_system.cpp  database_system.cpp.disabled  database_system.h  database_system_safe.cpp  database_system_stub.cpp.disabled  doc_data_format.cpp  doc_data_format.h  doc_database.cpp  doc_database.h  file_system.cpp  file_system.h  generic_database.cpp  generic_database.h  legacy_system.cpp  legacy_system.h  partitioned_system.cpp  partitioned_system.h  partitioned_v2.h  save_system.cpp  save_system.h  unified_database.cpp  unified_database.h  wbdf_compatibility.cpp  wbdf_compatibility.h  wbdf_format.cpp  wbdf_format.h  wbdf_integration.cpp  wbdf_integration.h  wisp_debug_system.h
src/engine/entities/: system.h
src/engine/events/: scene_event_dispatcher.cpp  scene_event_dispatcher.h
src/engine/graphics/: engine.h  fallback_asset_system.h  framebuffer.h  lut_system.cpp  lut_system.h  magic_channel_system.h  namespace_bridge.cpp  optimized_engine.h  optimized_engine_batch_integration.cpp  palette_lut_system.h  palette_system.h  particles.h  renderer.h  sprite_batch_system.cpp  sprite_batch_system.h  sprite_config.h  sprite_layers.cpp  sprite_layers.h  sprite_system.h  wisp_math.h
src/engine/integration/: secure_bootloader.h
src/engine/minimal/: minimal_api_wrapper.h  minimal_engine.cpp  minimal_engine.h
src/engine/physics/: engine.h  math.h
src/examples/: example_app_with_frame_rate.h
src/platform/: device_managment.h  diagnostics.h
src/services/: bt.h  wifi.h
src/system/: CMakeLists.txt  app_header.h  app_manager.h  asset_types.h  bluetooth_manager.h  board_auto_config.h  boot_state.h  boot_ui.h  bootloader.h  debug_esp32.cpp  debug_esp32.h  definitions.h  display_driver.h  engine_update_integration.h  enhanced_bootloader.h  esp32_common.h  esp32_common.h.backup  esp32_compat.cpp  esp32_serial.cpp  input_controller.h  led_controller.cpp  led_controller.h  led_implementations.h  settings.h  settings_manager.h  system_init.cpp  system_init.h  wisp_asset_types.h  wisp_bootloader.h  wisp_database_system.cpp  wisp_database_system.h  wisp_database_system_safe.cpp
src/utils/: main_menu.h
tools/asset_converters/: CMakeLists.txt
(+180 files in other folders)
